--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,80 +1,84 @@
 .hero-background {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    background: image-url('green_wheat_dark10.png') no-repeat center center fixed;
-    background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: image-url('green_wheat_dark10.png') no-repeat center center fixed;
+  background-size: cover;
 }
 
 .hero {
 
-    &.row {
-        margin-top: 12%;
+  &.row {
+    margin-top: 12%;
+  }
+
+  h1 {
+    color: white;
+    text-shadow: 0 -1px 1px rgba(0,0,0,0.6);
+    margin-bottom: 0;
+  }
+
+  h2 {
+    color: white;
+    text-shadow: 0 -1px 1px rgba(0,0,0,0.6);
+    margin-bottom: 0.65em;
+  }
+
+  input {
+    height: 50px;
+    font-size: 1.2em;
+
+    &.search {
+      padding: 1em;
     }
 
-    h1 {
-        color: white;
-        text-shadow: 0 -1px 1px rgba(0,0,0,0.6);
-        margin-bottom: 0;
+    &.button {
+      background-color: #85CB2B;
+      border-color: #4BA122;
     }
-
-    h2 {
-        color: white;
-        text-shadow: 0 -1px 1px rgba(0,0,0,0.6);
-        margin-bottom: 0.65em;
-    }
-
-    input {
-        height: 50px;
-        font-size: 1.2em;
-      
-        &.search {
-            padding: 1em;
-        }
-
-        &.button {
-            background-color: #85CB2B;
-            border-color: #4BA122;
-        }
-    }
+  }
 }
 
 /* Crop Cards */
 ul li.crop-card {
-    line-height: 0;
-    padding: 0;
-    display: inline-block;
-    background-color: white;
-    // border: solid 4px white;
-    -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
-    -webkit-transition: all 200ms ease-out;
-    -moz-transition: all 200ms ease-out;
-    transition: all 200ms ease-out;
+  line-height: 0;
+  padding: 0;
+  display: inline-block;
+  background-color: white;
+  // border: solid 4px white;
+  -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 200ms ease-out;
+  -moz-transition: all 200ms ease-out;
+  transition: all 200ms ease-out;
 
-    &:hover, &:focus {
-        -webkit-box-shadow: 0 0 6px 1px rgba(0, 140, 186, 0.5);
-        box-shadow: 0 0 6px 1px rgba(0, 140, 186, 0.5);
-    }
-    &.radius {
-        -webkit-border-radius: 3px;
-        border-radius: 3px;
-    }
+  &:hover, &:focus {
+    -webkit-box-shadow: 0 0 6px 1px rgba(0, 140, 186, 0.5);
+    box-shadow: 0 0 6px 1px rgba(0, 140, 186, 0.5);
+  }
+  &.radius {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+  }
 
-    h2 {
-        padding: 0 10px;
-    }
+  h2 {
+    padding: 0 10px;
+  }
 
-    table {
-        border: 0;
-        width: 100%;
-    }
+  table {
+    border: 0;
+    width: 100%;
+  }
 }
 
-a.crop-card {
+  a.crop-card {
     display: inline-block;
     max-width: 100%;
-}
+  }
+
+  textarea {
+    max-width: 100%
+  }
 
 
 // @media #{$small-only} {
